# rob530-final-project

./: .gitignore  README.md  camera.yaml  data_files.txt  get_data.sh  imagelist.yaml  pyproject.toml  stereo_imagelist.yaml
NTU_Sequences/sequences/eee_02/: times.txt
NTU_Sequences/sequences/eee_03/: times.txt
NTU_Sequences/sequences/nya_01/: times.txt
NTU_Sequences/sequences/sbs_02/: times.txt
ORB_SLAM2/NTU_Project/Mono/: mono_NTU.yaml
evaluate_ate_scale/: convertGroundTruthTimestamp.py  csv_to_txt.py  evaluate_ate_scale.py
evaluate_ate_scale/GroundTruths/: eee_01_ground_truth.txt  eee_03_ground_truth.txt  nya_01_ground_truth.txt  nya_03_ground_truth.txt  sbs_02_ground_truth.txt
evaluate_ate_scale/convertedGroundTruths/: nya_01_ground_truth.txt  nya_03_ground_truth.txt  sbs_02_ground_truth.txt
evaluate_ate_scale/convertedTrajectories/: eee_02_1300Features_KeyFrameTrajectory.txt  eee_03_1000Features_KeyFrameTrajectory.txt  nya_02_KeyFrameTrajectory.txt  sbs_02_KeyFrameTrajectory.txt
na568Project (to be renamed)/: README.txt
na568Project/ORB_SLAM2/: CMakeLists.txt
na568Project/ORB_SLAM2/src/: Tracking.cc
na568Project/evaluate_ate_scale/: convertTimestamps.sh  convertTrajectoryTimestamp.py
na568Project/evaluate_ate_scale/GroundTruths/: eee_02_ground_truth.txt  nya_02_ground_truth.txt
na568Project/evaluate_ate_scale/Trajectories/: eee_02_1000Features_KeyFrameTrajectory.txt  eee_02_1300Features_KeyFrameTrajectory.txt  nya_01_KeyFrameTrajectory.txt  sbs_02_KeyFrameTrajectory.txt
rob530/scripts/: calibration_convertor.py
(+30 files in other folders)
